[gd_scene load_steps=18 format=3 uid="uid://dgds4d2p6hdb6"]

[ext_resource type="Script" path="res://ui/voyage/voyage.gd" id="1_5qb4k"]
[ext_resource type="Texture2D" uid="uid://ni8luuna6wp3" path="res://assets/table/voyage.png" id="2_7p6d8"]
[ext_resource type="Texture2D" uid="uid://cig0x4566omk0" path="res://assets/table/voyage_ship.png" id="3_xhs1r"]
[ext_resource type="Texture2D" uid="uid://b0mdmdt17jqo5" path="res://assets/table/voyage_river.png" id="4_d6uqt"]
[ext_resource type="Shader" path="res://shaders/shader.gdshader" id="4_qfjp8"]
[ext_resource type="Texture2D" uid="uid://b4vcjstucr4wq" path="res://assets/table/voyage_trial.png" id="5_0byhk"]
[ext_resource type="PackedScene" uid="uid://b68ccb5fvw5is" path="res://ui/tooltip_emitter.tscn" id="6_ghygi"]
[ext_resource type="Texture2D" uid="uid://cpmrsed2g2wu2" path="res://assets/table/voyage_nemesis.png" id="7_gw4gm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yrc8f"]
shader = ExtResource("4_qfjp8")
shader_parameter/replace_color1 = Color(0, 0, 0, 1)
shader_parameter/replace_with_color1 = Color(0, 0, 0, 1)
shader_parameter/replace_color2 = Color(0, 0, 0, 1)
shader_parameter/replace_with_color2 = Color(0, 0, 0, 1)
shader_parameter/replace_color3 = Color(0, 0, 0, 1)
shader_parameter/replace_with_color3 = Color(0, 0, 0, 1)
shader_parameter/replace_color4 = Color(0, 0, 0, 1)
shader_parameter/replace_with_color4 = Color(0, 0, 0, 1)
shader_parameter/replace_color5 = Color(0, 0, 0, 1)
shader_parameter/replace_with_color5 = Color(0, 0, 0, 1)
shader_parameter/tint_color = Color(0, 0, 0, 1)
shader_parameter/tint_strength = 0.0
shader_parameter/use_exclude_tint = false
shader_parameter/exclude_tint = Color(0, 0, 0, 1)
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_thickness = 0
shader_parameter/outline_diagonals = false
shader_parameter/outline_glow = false
shader_parameter/outline_glow_min = 0.2
shader_parameter/outline_glow_max = 1.0
shader_parameter/pan_speed = Vector2(0, 0)
shader_parameter/transparency = 1.0

[sub_resource type="Animation" id="Animation_bgtnn"]
resource_name = "boat"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ship:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [19.0, 20.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g6o5y"]
_data = {
"boat": SubResource("Animation_bgtnn")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_x8w0s"]
atlas = ExtResource("5_0byhk")
region = Rect2(0, 0, 7, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_46f74"]
atlas = ExtResource("5_0byhk")
region = Rect2(7, 0, 7, 7)

[sub_resource type="SpriteFrames" id="SpriteFrames_iwdj2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8w0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46f74")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_wdup0"]
atlas = ExtResource("7_gw4gm")
region = Rect2(0, 0, 8, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyi24"]
atlas = ExtResource("7_gw4gm")
region = Rect2(8, 0, 8, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_dr41f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdup0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyi24")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[node name="Voyage" type="Node2D"]
script = ExtResource("1_5qb4k")

[node name="UI" type="Sprite2D" parent="."]
texture = ExtResource("2_7p6d8")
centered = false

[node name="Ship" type="Sprite2D" parent="."]
position = Vector2(8, 20)
texture = ExtResource("3_xhs1r")
centered = false

[node name="River" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_yrc8f")
position = Vector2(5, 26)
texture = ExtResource("4_d6uqt")
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g6o5y")
}

[node name="Price" type="RichTextLabel" parent="."]
texture_filter = 1
clip_contents = false
custom_minimum_size = Vector2(0, 10)
offset_left = 56.0
offset_top = 44.0
offset_right = 106.0
offset_bottom = 58.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
bbcode_enabled = true
text = "[center][color=#e12f3b]-5[/color][img=12x13]res://assets/icons/coin_icon.png[/img]"
scroll_active = false
autowrap_mode = 2

[node name="Price2" type="RichTextLabel" parent="."]
texture_filter = 1
clip_contents = false
custom_minimum_size = Vector2(0, 10)
offset_left = 104.0
offset_top = 44.0
offset_right = 154.0
offset_bottom = 58.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
bbcode_enabled = true
text = "[center][color=#e12f3b]-10[/color][img=12x13]res://assets/icons/coin_icon.png[/img]"
scroll_active = false
autowrap_mode = 2

[node name="Price3" type="RichTextLabel" parent="."]
texture_filter = 1
clip_contents = false
custom_minimum_size = Vector2(0, 10)
offset_left = 151.0
offset_top = 44.0
offset_right = 201.0
offset_bottom = 58.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
bbcode_enabled = true
text = "[center][color=#e12f3b]-25[/color][img=12x13]res://assets/icons/coin_icon.png[/img]"
scroll_active = false
autowrap_mode = 2

[node name="ShipPositions" type="Node" parent="."]

[node name="Dock" type="Node2D" parent="ShipPositions"]
position = Vector2(8, 20)

[node name="Round1" type="Node2D" parent="ShipPositions"]
position = Vector2(22, 20)

[node name="Round2" type="Node2D" parent="ShipPositions"]
position = Vector2(34, 20)

[node name="Round3" type="Node2D" parent="ShipPositions"]
position = Vector2(46, 20)

[node name="TrialRound4" type="Node2D" parent="ShipPositions"]
position = Vector2(59, 20)

[node name="Gate1" type="Node2D" parent="ShipPositions"]
position = Vector2(70, 20)

[node name="Round5" type="Node2D" parent="ShipPositions"]
position = Vector2(80, 20)

[node name="Round6" type="Node2D" parent="ShipPositions"]
position = Vector2(92, 20)

[node name="TrialRound7" type="Node2D" parent="ShipPositions"]
position = Vector2(105, 20)

[node name="Gate2" type="Node2D" parent="ShipPositions"]
position = Vector2(116, 20)

[node name="Round8" type="Node2D" parent="ShipPositions"]
position = Vector2(126, 20)

[node name="Round9" type="Node2D" parent="ShipPositions"]
position = Vector2(138, 20)

[node name="BossRound10" type="Node2D" parent="ShipPositions"]
position = Vector2(151, 20)

[node name="Gate3" type="Node2D" parent="ShipPositions"]
position = Vector2(163, 20)

[node name="Win" type="Node2D" parent="ShipPositions"]
position = Vector2(174, 20)

[node name="Trial1" type="AnimatedSprite2D" parent="."]
position = Vector2(66, 37)
sprite_frames = SubResource("SpriteFrames_iwdj2")
autoplay = "default"
centered = false

[node name="TooltipEmitter" parent="Trial1" instance=ExtResource("6_ghygi")]
offset_left = -1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = 1.0
_tooltip = "Trial 1"

[node name="Trial2" type="AnimatedSprite2D" parent="."]
position = Vector2(112, 37)
sprite_frames = SubResource("SpriteFrames_iwdj2")
autoplay = "default"
centered = false

[node name="TooltipEmitter" parent="Trial2" instance=ExtResource("6_ghygi")]
offset_left = -1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = 1.0
_tooltip = "Trial 2"

[node name="Nemesis" type="AnimatedSprite2D" parent="."]
position = Vector2(158, 36)
sprite_frames = SubResource("SpriteFrames_dr41f")
autoplay = "default"
centered = false

[node name="TooltipEmitter" parent="Nemesis" instance=ExtResource("6_ghygi")]
offset_left = -1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = 1.0
_tooltip = "Trial 3"

[node name="TollgateTooltip1" parent="." instance=ExtResource("6_ghygi")]
offset_left = 76.0
offset_top = 32.0
offset_right = 85.0
offset_bottom = 42.0
_tooltip = "Trial 3"

[node name="TollgateTooltip2" parent="." instance=ExtResource("6_ghygi")]
offset_left = 122.0
offset_top = 32.0
offset_right = 131.0
offset_bottom = 42.0
_tooltip = "Trial 3"

[node name="TollgateTooltip3" parent="." instance=ExtResource("6_ghygi")]
offset_left = 169.0
offset_top = 32.0
offset_right = 178.0
offset_bottom = 42.0
_tooltip = "Trial 3"
